完善股票功能
